update a branch with redux

--- a/package.json
+++ b/package.json
@@ -6,17 +6,24 @@
   "author": "Sven Liebig <liebigsv@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@types/react-dom": "^16.0.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "redux": "^3.7.2",
     "ts-loader": "^4.1.0",
     "typescript": "^2.7.2",
     "webpack": "^4.2.0",
-    "webpack-cli": "^2.0.12",
-    "webpack-dev-server": "^3.1.1"
+    "webpack-cli": "^2.0.12"
   },
   "scripts": {
     "start": "webpack-dev-server --config config/webpack.config.js",
     "build": "webpack --config config/webpack.config.js"
+  },
+  "devDependencies": {
+    "@types/react-dom": "^16.0.4",
+    "@types/react-redux": "^5.0.15",
+    "@types/redux-devtools": "^3.0.43",
+    "react-redux": "^5.0.7",
+    "redux-devtools": "^3.4.1",
+    "webpack-dev-server": "^3.1.1"
   }
 }
