--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "ts-loader": "^4.1.0",
-    "typescript": "^2.7.2",
+    "typescript": "^3.0.1",
     "webpack": "^4.2.0",
     "webpack-cli": "^2.0.12",
     "webpack-dev-server": "^3.1.1"
   },
   "scripts": {
-    "start": "webpack-dev-server --config config/webpack.config.js",
-    "build": "webpack --config config/webpack.config.js"
+    "start": "webpack-dev-server --config config/webpack.config.ts",
+    "build": "webpack --config config/webpack.config.ts --mode production"
+  },
+  "devDependencies": {
+    "@types/node": "^10.5.8",
+    "@types/webpack": "^4.4.9",
+    "@types/webpack-dev-server": "^2.9.5",
+    "ts-node": "^7.0.1"
   }
 }
