--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,11 @@
 		"sourceMap": true,
 		"noImplicitAny": true,
 		"module": "commonjs",
+		"esModuleInterop": true,
 		"target": "es6",
 		"jsx": "react",
 		"allowJs": true,
+		"allowSyntheticDefaultImports": true,
 		// "noUnusedLocals": true,
 		// "noUnusedParameters": true
 		"experimentalDecorators": true,
